# mosh

./: .gitignore  .travis.yml  Makefile.am  configure.ac
man/: mosh-server.1
scripts/: Makefile.am
src/frontend/: mosh-server.cc
